--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-nltk
-spacy>=3.7.5
-pdfplumber>=0.7.0
-fastapi>=0.104.0
+mysql-connector-python>=8.0.0
 uvicorn[standard]>=0.24.0
 python-multipart>=0.0.6
